# DJANGO_news

./: db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: 403.html  article_delete.html  article_detail.html  article_edit.html  article_list.html  article_new.html  base.html  home.html
accounts/templates/registration/: login.html  password_change_done.html  password_change_form.html  signup.html
articles/: admin.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_comment.py
newspaper_project/: settings.py  urls.py
pages/: tests.py
