[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["missed86 <jimmy11286@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-crispy-forms = "^2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
